---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: override.md - `typing.override` - Basics
mdtest path: crates/ty_python_semantic/resources/mdtest/override.md
---

# Python source files

## mdtest_snippet.pyi

```
  1 | from typing_extensions import Any, Callable, TypeVar, override
  2 | 
  3 | # Decorator intentionally erases the wrapped signature.
  4 | def lossy_decorator(fn: Callable[..., Any]) -> Callable[..., Any]: ...
  5 | 
  6 | class A:
  7 |     @override
  8 |     def __repr__(self): ...  # fine: overrides `object.__repr__`
  9 | 
 10 | class Parent:
 11 |     def foo(self): ...
 12 |     @property
 13 |     def my_property1(self) -> int: ...
 14 |     @property
 15 |     def my_property2(self) -> int: ...
 16 | 
 17 |     baz = None
 18 | 
 19 |     @classmethod
 20 |     def class_method1(cls) -> int: ...
 21 |     @staticmethod
 22 |     def static_method1() -> int: ...
 23 |     @classmethod
 24 |     def class_method2(cls) -> int: ...
 25 |     @staticmethod
 26 |     def static_method2() -> int: ...
 27 |     @lossy_decorator
 28 |     def decorated_1(self): ...
 29 |     @lossy_decorator
 30 |     def decorated_2(self): ...
 31 |     @lossy_decorator
 32 |     def decorated_3(self): ...
 33 | 
 34 | class Child(Parent):
 35 |     @override
 36 |     def foo(self): ...  # fine: overrides `Parent.foo`
 37 |     @property
 38 |     @override
 39 |     def my_property1(self) -> int: ...  # fine: overrides `Parent.my_property1`
 40 |     @override
 41 |     @property
 42 |     def my_property2(self) -> int: ...  # fine: overrides `Parent.my_property2`
 43 |     @override
 44 |     def baz(self): ...  # fine: overrides `Parent.baz`
 45 |     @classmethod
 46 |     @override
 47 |     def class_method1(cls) -> int: ...  # fine: overrides `Parent.class_method1`
 48 |     @staticmethod
 49 |     @override
 50 |     def static_method1() -> int: ...  # fine: overrides `Parent.static_method1`
 51 |     @override
 52 |     @classmethod
 53 |     def class_method2(cls) -> int: ...  # fine: overrides `Parent.class_method2`
 54 |     @override
 55 |     @staticmethod
 56 |     def static_method2() -> int: ...  # fine: overrides `Parent.static_method2`
 57 |     @override
 58 |     def decorated_1(self): ...  # fine: overrides `Parent.decorated_1`
 59 |     @override
 60 |     @lossy_decorator
 61 |     def decorated_2(self): ...  # fine: overrides `Parent.decorated_2`
 62 |     @lossy_decorator
 63 |     @override
 64 |     def decorated_3(self): ...  # fine: overrides `Parent.decorated_3`
 65 | 
 66 | class OtherChild(Parent): ...
 67 | 
 68 | class Grandchild(OtherChild):
 69 |     @override
 70 |     def foo(self): ...  # fine: overrides `Parent.foo`
 71 |     @override
 72 |     @property
 73 |     def my_property1(self) -> int: ...  # fine: overrides `Parent.my_property1`
 74 |     @override
 75 |     def baz(self): ...  # fine: overrides `Parent.baz`
 76 |     @classmethod
 77 |     @override
 78 |     def class_method1(cls) -> int: ...  # fine: overrides `Parent.class_method1`
 79 |     @staticmethod
 80 |     @override
 81 |     def static_method1() -> int: ...  # fine: overrides `Parent.static_method1`
 82 |     @override
 83 |     @classmethod
 84 |     def class_method2(cls) -> int: ...  # fine: overrides `Parent.class_method2`
 85 |     @override
 86 |     @staticmethod
 87 |     def static_method2() -> int: ...  # fine: overrides `Parent.static_method2`
 88 |     @override
 89 |     def decorated_1(self): ...  # fine: overrides `Parent.decorated_1`
 90 |     @override
 91 |     @lossy_decorator
 92 |     def decorated_2(self): ...  # fine: overrides `Parent.decorated_2`
 93 |     @lossy_decorator
 94 |     @override
 95 |     def decorated_3(self): ...  # fine: overrides `Parent.decorated_3`
 96 | 
 97 | class Invalid:
 98 |     @override
 99 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
100 |     @override
101 |     @classmethod
102 |     def foo(self): ...  # error: [invalid-explicit-override]
103 |     @classmethod
104 |     @override
105 |     def bar(self): ...  # error: [invalid-explicit-override]
106 |     @staticmethod
107 |     @override
108 |     def baz(): ...  # error: [invalid-explicit-override]
109 |     @override
110 |     @staticmethod
111 |     def eggs(): ...  # error: [invalid-explicit-override]
112 |     @property
113 |     @override
114 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
115 |     @override
116 |     @property
117 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
118 |     @property
119 |     @override
120 |     def bad_settable_property(self) -> int: ...  # error: [invalid-explicit-override]
121 |     @bad_settable_property.setter
122 |     def bad_settable_property(self, x: int) -> None: ...
123 |     @lossy_decorator
124 |     @override
125 |     def lossy(self): ...  # error: [invalid-explicit-override]
126 |     @override
127 |     @lossy_decorator
128 |     def lossy2(self): ...  # error: [invalid-explicit-override]
129 | 
130 | # These members override an inherited name,
131 | # but violate its Liskov contract.
132 | class LiskovViolatingButNotOverrideViolating(Parent):
133 |     @override
134 |     @property
135 |     def foo(self) -> int: ...  # error: [invalid-property-type-override]
136 |     @override
137 |     def my_property1(self) -> int: ...  # error: [invalid-property-type-override]
138 | 
139 |     # Class and static methods can override each other when "bound" signatures match,
140 |     # but here, we deliberately add a new parameter to introduce a Liskov violation
141 |     @staticmethod
142 |     @override
143 |     def class_method1(x: int) -> int: ...  # error: [invalid-method-override]
144 |     @classmethod
145 |     @override
146 |     def static_method1(cls, x: int) -> int: ...  # error: [invalid-method-override]
147 | 
148 | # Diagnostic edge case: `override` is very far away from the method definition in the source code:
149 | 
150 | T = TypeVar("T")
151 | 
152 | def identity(x: T) -> T: ...
153 | 
154 | class Foo:
155 |     @override
156 |     @identity
157 |     @identity
158 |     @identity
159 |     @identity
160 |     @identity
161 |     @identity
162 |     @identity
163 |     @identity
164 |     @identity
165 |     @identity
166 |     @identity
167 |     @identity
168 |     @identity
169 |     @identity
170 |     @identity
171 |     @identity
172 |     @identity
173 |     @identity
174 |     def bar(self): ...  # error: [invalid-explicit-override]
```

# Diagnostics

```
error[invalid-explicit-override]: Method `___reprrr__` is decorated with `@override` but does not override anything
  --> src/mdtest_snippet.pyi:99:9
   |
98 |     @override
   |     ---------
99 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
   |         ^^^^^^^^^^^
info: No `___reprrr__` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `foo` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:102:9
    |
100 |     @override
    |     ---------
101 |     @classmethod
102 |     def foo(self): ...  # error: [invalid-explicit-override]
    |         ^^^
info: No `foo` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bar` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:105:9
    |
104 |     @override
    |     ---------
105 |     def bar(self): ...  # error: [invalid-explicit-override]
    |         ^^^
info: No `bar` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `baz` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:108:9
    |
107 |     @override
    |     ---------
108 |     def baz(): ...  # error: [invalid-explicit-override]
    |         ^^^
info: No `baz` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `eggs` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:111:9
    |
109 |     @override
    |     ---------
110 |     @staticmethod
111 |     def eggs(): ...  # error: [invalid-explicit-override]
    |         ^^^^
info: No `eggs` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bad_property1` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:114:9
    |
113 |     @override
    |     ---------
114 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^
info: No `bad_property1` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bad_property2` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:117:9
    |
115 |     @override
    |     ---------
116 |     @property
117 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^
info: No `bad_property2` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bad_settable_property` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:120:9
    |
119 |     @override
    |     ---------
120 |     def bad_settable_property(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^^^^^^^^^
info: No `bad_settable_property` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `lossy` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:125:9
    |
124 |     @override
    |     ---------
125 |     def lossy(self): ...  # error: [invalid-explicit-override]
    |         ^^^^^
info: No `lossy` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `lossy2` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:128:9
    |
126 |     @override
    |     ---------
127 |     @lossy_decorator
128 |     def lossy2(self): ...  # error: [invalid-explicit-override]
    |         ^^^^^^
info: No `lossy2` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-property-type-override]: Invalid override of attribute `foo`
   --> src/mdtest_snippet.pyi:135:9
    |
135 |     def foo(self) -> int: ...  # error: [invalid-property-type-override]
    |         ^^^ Read type `int` is not assignable to inherited read type `() -> Unknown`
    |
   ::: src/mdtest_snippet.pyi:11:9
    |
 11 |     def foo(self): ...
    |         --- `Parent.foo` declared here

```

```
error[invalid-property-type-override]: Invalid override of attribute `my_property1`
   --> src/mdtest_snippet.pyi:137:9
    |
137 |     def my_property1(self) -> int: ...  # error: [invalid-property-type-override]
    |         ^^^^^^^^^^^^ Read type `() -> int` is not assignable to inherited read type `int`
    |
   ::: src/mdtest_snippet.pyi:13:9
    |
 13 |     def my_property1(self) -> int: ...
    |         ------------ `Parent.my_property1` declared here

```

```
error[invalid-method-override]: Invalid override of method `class_method1`
   --> src/mdtest_snippet.pyi:143:9
    |
143 |     def class_method1(x: int) -> int: ...  # error: [invalid-method-override]
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.class_method1`
    |
   ::: src/mdtest_snippet.pyi:20:9
    |
 20 |     def class_method1(cls) -> int: ...
    |         ------------------------- `Parent.class_method1` defined here
info: `LiskovViolatingButNotOverrideViolating.class_method1` is a staticmethod but `Parent.class_method1` is a classmethod
info: unexpected extra parameter `x`
help: Parameter `x` must have a default value
info: This violates the Liskov Substitution Principle

```

```
error[invalid-method-override]: Invalid override of method `static_method1`
   --> src/mdtest_snippet.pyi:146:9
    |
146 |     def static_method1(cls, x: int) -> int: ...  # error: [invalid-method-override]
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.static_method1`
    |
   ::: src/mdtest_snippet.pyi:22:9
    |
 22 |     def static_method1() -> int: ...
    |         ----------------------- `Parent.static_method1` defined here
info: `LiskovViolatingButNotOverrideViolating.static_method1` is a classmethod but `Parent.static_method1` is a staticmethod
info: unexpected extra parameter `x`
help: Parameter `x` must have a default value
info: This violates the Liskov Substitution Principle

```

```
error[invalid-explicit-override]: Method `bar` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:174:9
    |
174 |     def bar(self): ...  # error: [invalid-explicit-override]
    |         ^^^
    |
   ::: src/mdtest_snippet.pyi:155:5
    |
155 |     @override
    |     ---------
info: No `bar` definitions were found on any superclasses of `Foo`

```
